src/objects/MetroclientGeography__c.object
<CustomObject>
    <description>Metroclient Product Catalog - Geographies</description>
    <fields>
        <fullName>GeographyType__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Geography Type</label>
        <referenceTo>MetroclientGeographyType__c</referenceTo>
        <relationshipName>MetroclientGeographyTypes</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Geography_FIPS__c</fullName>
        <label>Geography FIPS</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HWMIMarketCode__c</fullName>
        <description>The HWMI Market Code assigned to CBSAs for HWMI reports to work properly</description>
        <inlineHelpText>The HWMI Market Code assigned to CBSAs for HWMI reports to work properly</inlineHelpText>
        <label>HWMI Market Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesRegion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Region</label>
        <referenceTo>MetrostudySalesRegion__c</referenceTo>
        <relationshipName>MetroclientGeographies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Seg2_Name__c</fullName>
        <label>Seg2 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seg2__c</fullName>
        <label>Seg2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StateList__c</fullName>
        <label>State List</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <label>Metrostudy Geography</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Geography_FIPS__c</columns>
        <columns>GeographyType__c</columns>
        <columns>StateList__c</columns>
        <columns>SalesRegion__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FilterCBSA</fullName>
        <columns>NAME</columns>
        <columns>Geography_FIPS__c</columns>
        <columns>SalesRegion__c</columns>
        <columns>StateList__c</columns>
        <columns>HWMIMarketCode__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GeographyType__c</field>
            <operation>equals</operation>
            <value>CBSA</value>
        </filters>
        <label>CBSA</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FilterCounty</fullName>
        <columns>NAME</columns>
        <columns>Geography_FIPS__c</columns>
        <columns>GeographyType__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GeographyType__c</field>
            <operation>equals</operation>
            <value>County</value>
        </filters>
        <label>County</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MarketMarketss</fullName>
        <columns>NAME</columns>
        <columns>Geography_FIPS__c</columns>
        <columns>GeographyType__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GeographyType__c</field>
            <operation>equals</operation>
            <value>Market</value>
        </filters>
        <label>Markets</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Regions</fullName>
        <columns>NAME</columns>
        <columns>GeographyType__c</columns>
        <columns>Geography_FIPS__c</columns>
        <columns>StateList__c</columns>
        <columns>SalesRegion__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GeographyType__c</field>
            <operation>contains</operation>
            <value>Region</value>
        </filters>
        <label>Regions</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Seg2</fullName>
        <columns>NAME</columns>
        <columns>GeographyType__c</columns>
        <columns>Seg2__c</columns>
        <columns>Geography_FIPS__c</columns>
        <columns>StateList__c</columns>
        <columns>SalesRegion__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Seg2__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>GeographyType__c</field>
            <operation>equals</operation>
            <value>Market</value>
        </filters>
        <filters>
            <field>Geography_FIPS__c</field>
            <operation>notContain</operation>
            <value>c</value>
        </filters>
        <label>Seg2</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Seg2_all</fullName>
        <columns>NAME</columns>
        <columns>GeographyType__c</columns>
        <columns>Seg2__c</columns>
        <columns>Geography_FIPS__c</columns>
        <columns>StateList__c</columns>
        <columns>SalesRegion__c</columns>
        <filterScope>Everything</filterScope>
        <label>Seg2 all</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>States</fullName>
        <columns>NAME</columns>
        <columns>GeographyType__c</columns>
        <columns>Geography_FIPS__c</columns>
        <columns>StateList__c</columns>
        <columns>SalesRegion__c</columns>
        <columns>Seg2__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GeographyType__c</field>
            <operation>equals</operation>
            <value>State</value>
        </filters>
        <label>States</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Geography Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Metrostudy Geographies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>